# texturas_sonoras

./: .gitignore  CHANGELOG.md  README.md  app.py  loop_test.py  pyproject.toml  requirements-gpu.txt  requirements-lite.txt  requirements.txt  run.sh  run_windows.bat
docs/: ARCHITECTURE.md  OPERATOR.md  PAPER_CORE_PLAN.md  PRODUCT_LAUNCH_WEEK.md  STATE.md  WORKLOG.md
landing/: index.html  politica-de-privacidad.html  politica-de-soporte.html  terminos-de-servicio.html
landing/assets/css/: ud-styles.css
landing/assets/js/: main.js
scripts/: loop_test.py
src/: app.py  audio_processing.py  config.py  dsp.py
src/mgi/: __init__.py  constraints.py  metrics.py  operator.py
tests/: test_determinism.py  test_gpu.py  test_gpu_smoke.py  test_mgi.py
