[project]
name = "texturas-sonoras"
version = "0.2.0"
description = "Motor generativo de texturas sonoras (granular synthesis + MGI)"
requires-python = ">=3.11"
license = "Proprietary"
authors = [
    { name = "Andres Mahecha" },
]
dependencies = [
    "streamlit>=1.38",
    "numpy>=1.26,<2",
    "scipy>=1.14",
    "librosa>=0.10",
    "soundfile>=0.12",
    "soxr>=0.5",
    "matplotlib>=3.9",
    "pedalboard>=0.9",
]

[project.optional-dependencies]
gpu = ["torch>=2.5"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
